--- a/ICINBank/src/main/resources/application.properties
+++ b/ICINBank/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql: true
 
 local.server.port=8080
 server.error.whitelabel.enabled=false
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
