--- a/ICINBank/src/main/resources/application.properties
+++ b/ICINBank/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/onlinebanking
+spring.datasource.url=jdbc:mysql://172.31.12.234:3306/onlinebanking
 spring.datasource.username=onlinebankinguser
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
